@@ -1,3 +1,6 @@
+2001-09-20  Cristy  <cristy@mystic.es.dupont.com>
+	* Fixed svg.c to accept a viewbox with a negative offset.
+
 2001-09-15  Cristy  <cristy@mystic.es.dupont.com>
 	* Surveying the code for 64-bit compatibility.
 	* The cloned colormap was too small (reported by Glenn).
